--- a/webpages/how-it-works.html
+++ b/webpages/how-it-works.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <video autoplay muted loop class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="assets/getting-started.mp4">
+            <video autoplay muted loop class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="assets/getting-started.mp4" />
         </div>
     </div>
 </section>
