--- a/webpages/index.html
+++ b/webpages/index.html
@@ -10,7 +10,7 @@
                 OpenAudioMc is <i>the</i> simple to use Music VoiceChat solution for minecraft. It's super simple to use, players imply open their web page without downloading anything, and they're set!
             </p>
             <div class="flex mt-4">
-                <a href="#_"
+                <a href="documentation.html"
                    class="flex items-center self-start justify-center px-5 py-3 mt-5 text-base font-medium leading-tight text-white transition duration-150 ease-in-out bg-indigo-600 border border-transparent rounded-lg shadow hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo md:py-4 md:text-lg md:px-8">Get
                     Started</a>
                 <a href="how-it-works.html"
@@ -19,14 +19,14 @@
             </div>
         </div>
         <div class="relative w-1/2 overflow-hidden rounded-lg shadow-2xl cursor-pointer group">
-            <div class="absolute flex items-center justify-center w-full h-full bg-black bg-opacity-25">
-                <span class="flex items-center justify-center w-20 h-20 bg-white bg-opacity-75 rounded-full">
-                    <svg class="w-auto h-8 ml-1 text-indigo-600 fill-current" viewBox="0 0 52 66"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M50 30.7L4.1.6C2.6-.4.8.9.8 2.9v60.3c0 2 1.8 3.3 3.3 2.3L50 35.3c1.5-1 1.5-3.6 0-4.6z"
-                              fill-rule="nonzero" /></svg>
-                </span>
-            </div>
+<!--            <div class="absolute flex items-center justify-center w-full h-full bg-black bg-opacity-25">-->
+<!--                <span class="flex items-center justify-center w-20 h-20 bg-white bg-opacity-75 rounded-full">-->
+<!--                    <svg class="w-auto h-8 ml-1 text-indigo-600 fill-current" viewBox="0 0 52 66"-->
+<!--                         xmlns="http://www.w3.org/2000/svg">-->
+<!--                        <path d="M50 30.7L4.1.6C2.6-.4.8.9.8 2.9v60.3c0 2 1.8 3.3 3.3 2.3L50 35.3c1.5-1 1.5-3.6 0-4.6z"-->
+<!--                              fill-rule="nonzero" /></svg>-->
+<!--                </span>-->
+<!--            </div>-->
             <img src="assets/bg.jpg"
                  class="object-cover w-full h-full">
         </div>
