--- a/webpages/index.html
+++ b/webpages/index.html
@@ -7,7 +7,7 @@
             <h2 class="relative z-20 text-5xl font-extrabold leading-tight text-white">Social multiplayer.. Reinvented
             </h2>
             <p class="relative z-20 block mt-4 text-xl">
-                OpenAudioMc is <i>the</i> simple to use Music VoiceChat solution for minecraft. It's super simple to use, players imply open their web page without downloading anything, and they're set!
+                OpenAudioMc is <i>the</i> simple to use Music VoiceChat solution for minecraft. It's super simple to use, players simply open their web page without downloading anything, and they're set!
             </p>
             <div class="flex mt-4">
                 <a href="how-it-works.html"
@@ -18,7 +18,7 @@
                     It Works</a>
             </div>
         </div>
-        <div class="relative w-1/2 overflow-hidden rounded-lg shadow-2xl cursor-pointer group">
+        <div class="hidden md:block relative w-1/2 overflow-hidden rounded-lg shadow-2xl cursor-pointer group">
 <!--            <div class="absolute flex items-center justify-center w-full h-full bg-black bg-opacity-25">-->
 <!--                <span class="flex items-center justify-center w-20 h-20 bg-white bg-opacity-75 rounded-full">-->
 <!--                    <svg class="w-auto h-8 ml-1 text-indigo-600 fill-current" viewBox="0 0 52 66"-->
