--- a/webpages/index.html
+++ b/webpages/index.html
@@ -7,7 +7,7 @@
             <h2 class="relative z-20 text-5xl font-extrabold leading-tight text-white">Social multiplayer.. Reinvented
             </h2>
             <p class="relative z-20 block mt-4 text-xl">
-                OpenAudioMc is <i>the</i> simple to use Music VoiceChat solution for minecraft. It's super simple to use, players simply open their web page without downloading anything, and they're set!
+                OpenAudioMc is <i>the</i> simple to use Music & VoiceChat solution for minecraft. It's super simple to use, players simply open their web page without downloading anything, and they're set!
             </p>
             <div class="flex mt-4">
                 <a href="how-it-works.html"
