--- a/webpages/how-it-works.html
+++ b/webpages/how-it-works.html
@@ -19,7 +19,7 @@
                     <div class="flex-grow pl-4">
                         <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 1</h2>
                         <p class="leading-relaxed">
-                            They player joins your minecraft server with their prefered version and client
+                            The player joins your minecraft server with their preferred version and client
                         </p>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                     <div class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"></div>
                     <div class="flex-grow pl-4">
                         <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 2</h2>
-                        <p class="leading-relaxed">The player gets a message asking them co connect when joining or after running <b>/audio</b>, simply click on the chat message</p>
+                        <p class="leading-relaxed">The player gets a message asking them to connect when joining or after running <b>/audio</b>, simply click on the chat message</p>
                     </div>
                 </div>
                 <div class="flex relative pb-12">
@@ -57,7 +57,7 @@
                     <div class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"></div>
                     <div class="flex-grow pl-4">
                         <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">FINISH</h2>
-                        <p class="leading-relaxed">Congratz! You're now connected! You can now head back to the game and enjoy the ambient music and sound effects, or dive deeper and activate Proximity Voice Chat</p>
+                        <p class="leading-relaxed">Congrats! You're now connected! You can now head back to the game and enjoy the ambient music and sound effects, or dive deeper and activate Proximity Voice Chat</p>
                     </div>
                 </div>
             </div>
