--- a/html_templates/base.html
+++ b/html_templates/base.html
@@ -21,6 +21,7 @@
           content="assets/logo.png">
     <meta name="twitter:url" content="https://twitter.com/Mindgamesnl">
     <meta name="twitter:card" content="summary">
+    <script src="https://kit.fontawesome.com/356f5e0146.js" crossorigin="anonymous"></script>
     <title>OpenAudioMc - Audio for Minecraft</title>
 
 
@@ -84,7 +85,7 @@
         </div>
     </div>
 </header>
-
+</head>
 {{ include(page_content) }}
 
 <footer class="text-gray-400 bg-gray-900 body-font">
