fixed some general html malformats
- language tag not added in html
- removed dublicates of title tag set 3 times inside head
- alt attribute of pictures added

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -27,7 +27,7 @@
 <!--                              fill-rule="nonzero" /></svg>-->
 <!--                </span>-->
 <!--            </div>-->
-            <img src="assets/bg.jpg"
+            <img src="assets/bg.jpg" alt="minecraft background"
                  class="object-cover w-full h-full">
         </div>
     </div>
