--- a/webpages/index.html
+++ b/webpages/index.html
@@ -16,6 +16,9 @@
                 <a href="documentation.html"
                    class="flex items-center self-start justify-center px-5 py-3 mt-5 ml-5 text-base font-medium leading-tight text-indigo-500 transition duration-150 ease-in-out bg-gray-200 border-transparent rounded-lg shadow hover:bg-white focus:outline-none focus:border-gray-100 focus:shadow-outline-gray md:py-4 md:text-lg md:px-8">How
                     It Works</a>
+                <a href="command-list.html.html"
+                   class="flex items-center self-start justify-center px-5 py-3 mt-5 ml-5 text-base font-medium leading-tight text-indigo-500 transition duration-150 ease-in-out bg-gray-200 border-transparent rounded-lg shadow hover:bg-white focus:outline-none focus:border-gray-100 focus:shadow-outline-gray md:py-4 md:text-lg md:px-8">
+                    Commands</a>
             </div>
         </div>
         <div class="hidden md:block relative w-1/2 overflow-hidden rounded-lg shadow-2xl cursor-pointer group">
