added troubleshooter part 1
- trouble shooter added
- icon changed for satanicflame
- corrected some typo's
- added shortcut to troubleshooter on home page

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -1,23 +1,33 @@
 <div class="relative flex flex-col items-center justify-center h-screen bg-cover min-w-screen"
      style="background-image:url('assets/matterhorn_winter.png')">
     <div class="absolute inset-0 w-full h-full bg-black bg-opacity-75"></div>
-
     <div class="flex max-w-6xl mx-auto">
-        <div class="container relative flex flex-col w-1/2 px-10 pb-1 pr-12 text-2xl font-hairline text-white">
-            <h2 class="relative z-20 text-5xl font-extrabold leading-tight text-white">Social multiplayer... Reinvented
-            </h2>
-            <p class="relative z-20 block mt-4 text-xl">
+        <div class="container relative flex flex-col w-100 px-10 pb-1 pr-10 text-2xl font-hairline text-white">
+    <h2 class="relative z-20 text-5xl font-extrabold leading-tight text-white text-center">Social multiplayer... Reinvented
+    </h2>
+
+        </div>
+        </div>
+    <div class="flex max-w-7xl mx-auto mt-10">
+        <div class="container relative flex flex-col  w-1/2 px-10 pb-1 pr-10 text-2xl font-hairline text-white">
+            <p class="relative z-20 block mt-4 text-xl  text-center mt-14">
                 OpenAudioMc is <i>the</i> simple to use Music & VoiceChat solution for minecraft. It's super simple to use, players simply open their web page without downloading anything, and they're set!
             </p>
-            <div class="flex mt-4">
+            <div class="flex mt-3 justify-center ">
                 <a href="documentation.html"
-                   class="flex items-center self-start justify-center px-5 py-3 mt-5 text-base font-medium leading-tight text-white transition duration-150 ease-in-out bg-indigo-600 border border-transparent rounded-lg shadow hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo md:py-4 md:text-lg md:px-8">
+                   class="flex items-center self-start justify-center px-1 py-3 mt-4 text-base font-medium leading-tight text-indigo-500 transition duration-150 ease-in-out bg-gray-200 border-transparent rounded-lg shadow hover:bg-white focus:outline-none focus:border-gray-100 focus:shadow-outline-gray md:py-4 md:text-lg md:px-8">
                     Documentation</a>
                 <a href="how-it-works.html"
-                   class="flex items-center self-start justify-center px-5 py-3 mt-5 ml-5 text-base font-medium leading-tight text-indigo-500 transition duration-150 ease-in-out bg-gray-200 border-transparent rounded-lg shadow hover:bg-white focus:outline-none focus:border-gray-100 focus:shadow-outline-gray md:py-4 md:text-lg md:px-8">How
+                   class="flex items-center self-start justify-center px-1 py-3 mt-4 ml-3 text-base font-medium leading-tight text-indigo-500 transition duration-150 ease-in-out bg-gray-200 border-transparent rounded-lg shadow hover:bg-white focus:outline-none focus:border-gray-100 focus:shadow-outline-gray md:py-4 md:text-lg md:px-8">How
                     It Works</a>
+
             </div>
-        </div>
+            <div class="flex mt-2 justify-center">
+                <a href="the-help-I-am-an-idiot-file.html"
+                   class=" w-8/12 flex items-center self-start justify-center px-5 py-3 mt-3 p-5 text-base font-medium leading-tight text-white transition duration-150 ease-in-out bg-indigo-600 border border-transparent rounded-lg shadow hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo md:py-4 md:text-lg md:px-8">Troubleshooter</a>
+
+            </div>
+             </div>
         <div class="hidden md:block relative w-1/2 overflow-hidden rounded-lg shadow-2xl cursor-pointer group">
 <!--            <div class="absolute flex items-center justify-center w-full h-full bg-black bg-opacity-25">-->
 <!--                <span class="flex items-center justify-center w-20 h-20 bg-white bg-opacity-75 rounded-full">-->
