--- a/webpages/the-help-I-am-an-idiot-file.html
+++ b/webpages/the-help-I-am-an-idiot-file.html
@@ -313,6 +313,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="hidden client-mic-adjust" id="client-mic-adjust">
+                                <div class="radio-group form-group field-radio-group-1641571147151">
+                                    <label  class="radio-group-label font-extrabold">Play around with your input device or adjust your microphone threshold. You can toggle this menu with the button "Voice chat input settings toggle menu"
+                                        <span class="required">*</span></label>
+                                    <div class="radio-group m-3">
+                                        <div class="radio">
+                                            <input name="radio-group-1641571147151" access="false" id="client-mic-adjust-fail"
+                                                   required="required" aria-required="true" value="yes" type="radio">
+                                            <label for="client-mic-adjust-fail">It's still not working</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="hidden client-help-find-page" id="client-help-find-page">
 
                                 <div class="radio-group form-group field-radio-group-1641571236814">
@@ -753,6 +766,9 @@
     <div class="hidden problem-22-solve side-picture">
         <div class="info-picture"><img src="assets/java-new-audio-link.png" alt="java new audio link screenshot"></div>
     </div>
+    <div class="hidden client-mic-adjust side-picture">
+        <div class="info-picture"><img src="assets/mic-level.png" alt="java new audio link screenshot"></div>
+    </div>
     <div class="hidden problem-0-solve  problem-1-solve problem-26-solve side-picture">
     <iframe  height="315px" width="700px" src="https://www.youtube.com/embed/S29cQz094Bw" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
@@ -839,7 +855,7 @@
         $('.client-help-background').hide();
     });
     $("#client-problem-avatar-yes").change(function () {
-        $(".problem-18-solve").slideDown();
+        $(".client-mic-adjust").slideDown();
         $('.client-help-background').hide();
     });
     $("#client-problem-avatar-no").change(function () {
@@ -847,9 +863,14 @@
         $('.client-help-background').hide();
     });
     $("#client-problem-pop-up-yes").change(function () {
-        $(".problem-18-solve").slideDown();
+        $(".client-mic-adjust").slideDown();
         $('.client-help-popup').hide();
     });
+    $("#client-mic-adjust-fail").change(function () {
+        $(".problem-18-solve").slideDown();
+        $('.client-mic-adjust').hide();
+    });
+
     $("#client-problem-pop-up-no").change(function () {
         $(".problem-24-solve").slideDown();
         $('.client-help-popup').hide();
@@ -905,8 +926,6 @@
         $('.client-help').hide();
     });
     $(".back-main").click(function () {
-
-
         $('.dev-help').hide();
         $('.problem-solve').hide();
         $('.side-picture').hide();
@@ -925,6 +944,7 @@
         $('.dev-help-other-audio').hide();
         $('.dev-help-voice-chat').hide();
         $('.dev-help-setup').hide();
+        $('.client-mic-adjust').hide();
         $('.dev-help-install-perms-others').hide();
         $(".who-is-it").slideDown();
         $('#helper-form')[0].reset();
