mp4 is supported apperently, added to the troubleshooter

--- a/webpages/the-help-I-am-an-idiot-file.html
+++ b/webpages/the-help-I-am-an-idiot-file.html
@@ -706,7 +706,7 @@
                             <div id="problem-27-solve" class="problem-solve hidden problem-27-solve">
                                 <p>
                                     You have to be a patreon to play local files in your server. If you already are a patreon you can store those audio files inside the plugins folder. You CAN NOT USE SPACES inside your filenames. You can select the file with: <p>/oa @a local:yourfilename</p>
-                                    You can make subdirectories if you want inside you plugins folder. (default map: plugins/OpenAudioMc/audio/)
+                                    Supported audio files: mp3, Wav, Ogg, mp4. mp3 is recommended to use. You can make subdirectories if you want inside you plugins folder. (default map: plugins/OpenAudioMc/audio/)
                                 </p>
 
 
