breakpoint fix index page

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -9,7 +9,7 @@
         </div>
         </div>
     <div class="flex max-w-7xl mx-auto mt-10">
-        <div class="container relative flex flex-col  w-1/2 px-10 pb-1 pr-10 text-2xl font-hairline text-white">
+        <div class="container relative flex flex-col  xl:w-1/2 md:w-full px-10 pb-1 pr-10 text-2xl font-hairline text-white">
             <p class="relative z-20 block mt-4 text-xl  text-center mt-14">
                 OpenAudioMc is <i>the</i> simple to use Music & VoiceChat solution for minecraft. It's super simple to use, players simply open their web page without downloading anything, and they're set!
             </p>
