--- a/webpages/the-help-I-am-an-idiot-file.html
+++ b/webpages/the-help-I-am-an-idiot-file.html
@@ -785,7 +785,10 @@
         <div class="info-picture"><img src="assets/java-new-audio-link.png" alt="java new audio link screenshot"></div>
     </div>
     <div class="hidden problem-29-solve side-picture">
-        <div class="info-picture"><img src="assets/corrupted-speaker.png" alt="java new audio link screenshot"></div>
+        <div class="info-picture"><img src="assets/corrupted-speaker.png" alt="corrupted speaker error"></div>
+    </div>
+    <div class="hidden problem-8-solve side-picture">
+        <div class="info-picture"><img src="assets/bedrock-setup-help.gif" alt="bedrock setup help"></div>
     </div>
     <div class="hidden client-mic-adjust side-picture">
         <div class="info-picture"><img src="assets/mic-level.png" alt="java new audio link screenshot"></div>
@@ -815,7 +818,7 @@
 </div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="assets/jquery.js"></script>
 <script>
 
     $("#owner").change(function () {
