--- a/webpages/index.html
+++ b/webpages/index.html
@@ -1,38 +1,98 @@
-<div class="relative flex flex-col items-center justify-center h-screen bg-cover min-w-screen"
-     style="background-image:url('assets/matterhorn_winter.png')">
-    <div class="absolute inset-0 w-full h-full bg-black bg-opacity-75"></div>
-
-    <div class="flex max-w-6xl mx-auto">
-        <div class="container relative flex flex-col w-1/2 px-10 pb-1 pr-12 text-2xl font-hairline text-white">
-            <h2 class="relative z-20 text-5xl font-extrabold leading-tight text-white">Social multiplayer... Reinvented
-            </h2>
-            <p class="relative z-20 block mt-4 text-xl">
-                OpenAudioMc is <i>the</i> simple to use Music & VoiceChat solution for minecraft. It's super simple to use, players simply open their web page without downloading anything, and they're set!
-            </p>
-            <div class="flex mt-4">
-                <a href="documentation.html"
-                   class="flex items-center self-start justify-center px-5 py-3 mt-5 text-base font-medium leading-tight text-white transition duration-150 ease-in-out bg-indigo-600 border border-transparent rounded-lg shadow hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo md:py-4 md:text-lg md:px-8">
-                    Documentation</a>
-                <a href="how-it-works.html"
-                   class="flex items-center self-start justify-center px-5 py-3 mt-5 ml-5 text-base font-medium leading-tight text-indigo-500 transition duration-150 ease-in-out bg-gray-200 border-transparent rounded-lg shadow hover:bg-white focus:outline-none focus:border-gray-100 focus:shadow-outline-gray md:py-4 md:text-lg md:px-8">
-                    How to connect</a>
-                <a href="how-it-works.html"
-                   class="flex items-center self-start justify-center px-5 py-3 mt-5 ml-5 text-base font-medium leading-tight text-indigo-500 transition duration-150 ease-in-out bg-gray-200 border-transparent rounded-lg shadow hover:bg-white focus:outline-none focus:border-gray-100 focus:shadow-outline-gray md:py-4 md:text-lg md:px-8">
-                    Video tutorial
-                </a>
+<div class="relative px-4 pt-8 mx-auto lg:py-20 md:px-8 xl:px-12 sm:max-w-xl md:max-w-full bg-white">
+    <div class="max-w-xl mx-auto lg:max-w-screen-xl">
+        <div class="mb-16 lg:max-w-lg lg:mb-0">
+            <div class="max-w-xl mb-6">
+                <div>
+                    <p class="inline-block px-3 py-px mb-4 text-xs font-semibold tracking-wider text-teal-900 uppercase rounded-full bg-teal-accent-400">
+                        Unique, fast, and easy
+                    </p>
+                </div>
+                <p class="max-w-lg mb-6 font-sans font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none lg:text-5xl">
+                    Music and <br class="hidden md:block" />
+                    Proximity Voice Chat
+                    <span class="inline-block text-purple-400">without mods</span>
+                </p>
+                <p class="text-base text-gray-700 md:text-lg">
+                    Bring your community together and make your server truly unique by adding ambiance music to areas, and allowing players to team up like never before.
+                    <br class="hidden md:block" />
+                    It only takes <span class="inline-block text-purple-400">one click</span>!
+                </p>
             </div>
         </div>
-        <div class="hidden md:block relative w-1/2 overflow-hidden rounded-lg shadow-2xl cursor-pointer group">
-<!--            <div class="absolute flex items-center justify-center w-full h-full bg-black bg-opacity-25">-->
-<!--                <span class="flex items-center justify-center w-20 h-20 bg-white bg-opacity-75 rounded-full">-->
-<!--                    <svg class="w-auto h-8 ml-1 text-indigo-600 fill-current" viewBox="0 0 52 66"-->
-<!--                         xmlns="http://www.w3.org/2000/svg">-->
-<!--                        <path d="M50 30.7L4.1.6C2.6-.4.8.9.8 2.9v60.3c0 2 1.8 3.3 3.3 2.3L50 35.3c1.5-1 1.5-3.6 0-4.6z"-->
-<!--                              fill-rule="nonzero" /></svg>-->
-<!--                </span>-->
-<!--            </div>-->
-            <img src="assets/bg.jpg" alt="minecraft background"
-                 class="object-cover w-full h-full">
+    </div>
+    <div class="flex justify-center h-full overflow-hidden lg:w-2/3 xl:w-1/2 lg:absolute lg:justify-start lg:bottom-0 lg:right-0 lg:items-end lg:pr-32">
+        <div class="mockup-window border bg-base-300" style="height: fit-content;">
+            <div class="object-cover bg-base-200 max-w-full">
+                <img src="assets/img.png">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+    <div class="max-w-xl mb-10 md:mx-auto sm:text-center lg:max-w-2xl md:mb-12">
+        <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold leading-none tracking-tight text-gray-900 sm:text-4xl md:mx-auto">
+      <span class="relative inline-block">
+        <svg viewBox="0 0 52 24" fill="currentColor" class="absolute top-0 left-0 z-0 hidden w-32 -mt-8 -ml-20 text-blue-gray-100 lg:w-32 lg:-ml-28 lg:-mt-10 sm:block">
+          <defs>
+            <pattern id="d0d83814-78b6-480f-9a5f-7f637616b267" x="0" y="0" width=".135" height=".30">
+              <circle cx="1" cy="1" r=".7"></circle>
+            </pattern>
+          </defs>
+          <rect fill="url(#d0d83814-78b6-480f-9a5f-7f637616b267)" width="52" height="24"></rect>
+        </svg>
+        <span class="relative">Get</span>
+      </span>
+            started in just a few minutes
+        </h2>
+    </div>
+    <div class="relative grid gap-8 row-gap-5 mb-8 md:row-gap-8 lg:grid-cols-4 sm:grid-cols-2">
+        <div class="absolute inset-0 flex items-center justify-center sm:hidden lg:flex">
+            <div class="w-px h-full bg-gray-300 lg:w-full lg:h-px"></div>
+        </div>
+        <div class="p-5 duration-300 transform bg-white border rounded shadow-sm hover:-translate-y-2">
+            <div class="flex items-center justify-between mb-2">
+                <p class="text-lg font-bold leading-5">Download</p>
+                <p class="flex items-center justify-center w-6 h-6 font-bold rounded text-deep-purple-accent-400 bg-indigo-50">
+                    1
+                </p>
+            </div>
+            <p class="text-sm text-gray-900">
+                Download the plugin from Spigot, and restart your server
+            </p>
+        </div>
+        <div class="p-5 duration-300 transform bg-white border rounded shadow-sm hover:-translate-y-2">
+            <div class="flex items-center justify-between mb-2">
+                <p class="text-lg font-bold leading-5">Setup</p>
+                <p class="flex items-center justify-center w-6 h-6 font-bold rounded text-deep-purple-accent-400 bg-indigo-50">
+                    2
+                </p>
+            </div>
+            <p class="text-sm text-gray-900">
+                Run <span class="inline-block text-purple-400">/oa accept</span> to accept our TOS, this only has to be done once by an admin.
+            </p>
+        </div>
+        <div class="p-5 duration-300 transform bg-white border rounded shadow-sm hover:-translate-y-2">
+            <div class="flex items-center justify-between mb-2">
+                <p class="text-lg font-bold leading-5">Open the client</p>
+                <p class="flex items-center justify-center w-6 h-6 font-bold rounded text-deep-purple-accent-400 bg-indigo-50">
+                    3
+                </p>
+            </div>
+            <p class="text-sm text-gray-900">
+                Your players need to click the link in their chat when joining to open the web client, no setup or account required
+            </p>
+        </div>
+        <div class="p-5 duration-300 transform bg-white border rounded shadow-sm hover:-translate-y-2">
+            <div class="flex items-center justify-between mb-2">
+                <p class="text-lg font-bold leading-5">Enjoy</p>
+                <p class="flex items-center justify-center w-6 h-6 font-bold rounded text-deep-purple-accent-400 bg-indigo-50">
+                    4
+                </p>
+            </div>
+            <p class="text-sm text-gray-900">
+                Enjoy the plugin! Or check our <a href="documentation.html">documentation</a> to learn about all our other features and how to use them.
+            </p>
         </div>
     </div>
 </div>
