Add video as main

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -23,7 +23,7 @@
     <div class="flex justify-center h-full overflow-hidden lg:w-2/3 xl:w-1/2 lg:absolute lg:justify-start lg:bottom-0 lg:right-0 lg:items-end lg:pr-32">
         <div class="mockup-window border bg-base-300" style="height: fit-content;">
             <div class="object-cover bg-base-200 max-w-full">
-                <img src="assets/img.png">
+                <video autoplay muted loop class="object-cover object-center rounded-lg md:mt-0 mt-12" src="assets/getting-started.mp4" />
             </div>
         </div>
     </div>
